# WND-RPPD.01.02.01-20-0022-16-Centrum-Badawczo-Rozwojowe-Misja-White-Hill

./: README.md  README_PROJEKT.docx
machine_vision-master/: CMakeLists.txt  requirements.txt
machine_vision-master/AgroBlender/: Dockerfile
machine_vision-master/AgroObjectDetection/: Dockerfile  README.md
machine_vision-master/DP_Modules/Dummy/: CMakeLists.txt  main.cpp
machine_vision-master/DataSetWorker/: CMakeLists.txt
machine_vision-master/DataSetWorker/TestSetWorker/: CMakeLists.txt  test_connector.cpp  test_connector.h
machine_vision-master/DataSetWorker/src/: DataSet.h  connection.h
machine_vision-master/DataSetWorker/tests/: CMakeLists.txt  connectionTest.cpp
machine_vision-master/DataSetWorker/tests/mocks/: CMakeLists.txt  mock_connection.h
machine_vision-master/StemMeasurement/: CMakeLists.txt  main.cpp  testcv.cpp
machine_vision-master/docs/: image_segmentation.md  notes.md
machine_vision-master/image_processing/: different_stitching.py  harvest_index.py  image_processing_utils.py  object_counting.py  stitching.py  surface_calculating.py
machine_vision-master/image_processing/models/: create_tfrecord.py  image_augumentation.py  segnet.py  tfrecords_utils.py  train_model.py  training_report.py
machine_vision-master/image_processing/notebook/: __main__.py  calculate_stem_thickness.py  predict.ipynb  ramification_predict.ipynb  retinanet_predict.ipynb  segmentaion.ipynb  segmentation_stalk.py
moduł_human_machine_interface-elektronika/Electronic load HMI 1.0/: Electronic load HMI 1.0.OutJob  Electronic load HMI 1.0.PrjPcb  Electronic load HMI 1.0.PrjPcbStructure
moduł_interfejs_mechaniczny_wzór_przemysłowy-konstrukcja/: ___ interfejs mechaniczny ząoĺenie.STEP  druk3D gniazdo_docisk.STL
moduł_połączeniowy-elektronika/: Inteligentna wtyczka zaloĺenia.txt  Wtyczka.docx  iPlug1.0.OutJob  iPlug1.0.PrjPcb
moduł_połączeniowy-elektronika/Pcb/: iPlug.PcbDoc.htm  iPlug.step
moduł_połączeniowy-elektronika/Sch/: iPlug.SchDoc
moduł_sterujący_v3-elektronika/: MOD_STR_V3.DSN  MOD_STR_V3.MAX  mod_str_v3.opj
moduł_wykonawczy_V4-elektronika/: MOD_WYK_V4.DSN  MOD_WYK_V4.MAX  MOD_WYK_V4.SWPcbDoc  V4.SchDoc
moduł_wykonawczy_V4-elektronika/__Previews/: MOD_WYK_V4.SWPcbDocPreview  V4.SchDocPreview
moduł_wykonawczy_V7-elektronika/: MOD_WYK_V7.DSN  MOD_WYK_V7.MAX  mod_wyk_v7.opj
moduł_zasilania-elektronika/PWR MOD 1.0/: PWR MOD 1.0.OutJob  PWR MOD 1.0.PrjPcb
moduł_zasilania-elektronika/PWR MOD 1.0 B/: PWR MOD 1.0 B.OutJob  PWR MOD 1.0 B.PrjPcb
navigation-master/: CMakeLists.txt  README.md  map (copy).pgm  map.pgm  map.yaml  package.xml
navigation-master/launch/: amcl.launch  (+10 more)
schemat_blokowy_sterowania-elektronika/: 0.DBK  sch.DSN  sch.opj
(+161 files in other folders)
